--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,50 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  background-color: hsl(210, 36%, 96%);
+}
+.main {
+  width: 1000px;
+  margin: 0 auto;
+  max-width: 1000px;
+  min-width: 470px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.title {
+  width: auto;
+  text-align: center;
+  margin-bottom: 30px;
+  margin-top: 20px;
+  min-width: 1000px;
+}
+.title h2 {
+  color: green;
+}
+.underline {
+  width: 6rem;
+  height: 0.25rem;
+  background: gold;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.pic {
+  width: 550px;
+  height: 300px;
+}
+
+.price {
+  margin: 0 20px;
+  color: green;
+  background: rgba(161, 161, 230, 0.72);
+  height: 20px;
+}
+.d {
+  font-weight: 500;
+  color: hsl(46, 100%, 50%);
+}
+
+.day {
+  display: flex;
+
+  margin-left: 430px;
+  margin-top: -20px;
 }
